--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 			padding: 20px;
 		}
 		.hih__message {
-			margin-bottom: 40px;
+			margin-bottom: 20px;
+		}
+		@media(min-width: 992px) {
+			.hih__message {
+				margin-bottom: 40px;
+			}
 		}
 		.hih__cta {
 			display: block;
